contracts/common/utils/stellar/common-utils-macro-tests/tests/ui/upgradeable/fail/missing_auth_trait.stderr
error[E0277]: the trait bound `MyContract: utils::auth::Auth` is not satisfied
  --> tests/ui/upgradeable/fail/missing_auth_trait.rs:12:12
   |
12 | pub struct MyContract;
   |            ^^^^^^^^^^ the trait `utils::auth::Auth` is not implemented for `MyContract`
   |
note: required by a bound in `Upgradeable`
  --> dependencies/common-utils-stellar-contracts/src/upgradeable.rs
   |
   | pub trait Upgradeable: UpgradeableInternal + Auth {
   |                                              ^^^^ required by this bound in `Upgradeable`

error[E0277]: the trait bound `MyContract: utils::auth::Auth` is not satisfied
  --> tests/ui/upgradeable/fail/missing_auth_trait.rs:12:12
   |
12 | pub struct MyContract;
   |            ^^^^^^^^^^ the trait `utils::auth::Auth` is not implemented for `MyContract`
   |
note: required by a bound in `utils::upgradeable::Upgradeable::upgrade`
  --> dependencies/common-utils-stellar-contracts/src/upgradeable.rs
   |
   | pub trait Upgradeable: UpgradeableInternal + Auth {
   |                                              ^^^^ required by this bound in `Upgradeable::upgrade`
...
   |     fn upgrade(env: &soroban_sdk::Env, new_wasm_hash: &soroban_sdk::BytesN<32>) {
   |        ------- required by a bound in this associated function

error[E0277]: the trait bound `MyContract: utils::auth::Auth` is not satisfied
  --> tests/ui/upgradeable/fail/missing_auth_trait.rs:12:12
   |
12 | pub struct MyContract;
   |            ^^^^^^^^^^ the trait `utils::auth::Auth` is not implemented for `MyContract`
   |
note: required by a bound in `utils::upgradeable::Upgradeable::migrate`
  --> dependencies/common-utils-stellar-contracts/src/upgradeable.rs
   |
   | pub trait Upgradeable: UpgradeableInternal + Auth {
   |                                              ^^^^ required by this bound in `Upgradeable::migrate`
...
   |     fn migrate(env: &soroban_sdk::Env, migration_data: &soroban_sdk::Bytes) {
   |        ------- required by a bound in this associated function
